manifests/services/pihole/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-tcp
  type: LoadBalancer
  loadBalancerIP: 192.168.1.229
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
  type: LoadBalancer
  loadBalancerIP: 192.168.1.229
