manifests/services/pihole/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pihole.home`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
